[gd_scene load_steps=11 format=3 uid="uid://bumvir3k0bi4r"]

[ext_resource type="Texture2D" uid="uid://03ubnt3gru1w" path="res://assets/menu/images/ScifiBackground.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cmdy87f36pdx1" path="res://assets/menu/icons/active_local_icon.png" id="2"]
[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://chacq67vdf2pc" path="res://scenes/ui/SlinkyButton.tscn" id="13"]
[ext_resource type="Texture2D" uid="uid://b8fmjjc38121v" path="res://assets/menu/icons/active_online_icon.png" id="16"]
[ext_resource type="Texture2D" uid="uid://chwxudi850r5r" path="res://assets/menu/icons/active_training_icon.png" id="17"]
[ext_resource type="Texture2D" uid="uid://bhlxdbmqg7k60" path="res://assets/menu/icons/active_records_icon.png" id="22"]

[sub_resource type="Gradient" id="1"]
colors = PackedColorArray(0, 0, 0, 0.392157, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0, 0, 0, 0.784314)
border_width_top = 5
border_color = Color(0.196078, 0.72549, 0.74902, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("MainPane/MenuButtons/OnlineButton")
focus_next = NodePath("MainPane/MenuButtons/OnlineButton")
focus_mode = 2
script = ExtResource("4")

[node name="MenuBackground" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainBackground" type="TextureRect" parent="MenuBackground"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 1

[node name="MainPane" type="Control" parent="."]
anchors_preset = 0
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AccentGradient" type="TextureRect" parent="MainPane"]
show_behind_parent = true
layout_mode = 0
anchor_right = 0.09
anchor_bottom = 1.0
texture = SubResource("2")
expand_mode = 1
stretch_mode = 1

[node name="MenuButtons" type="Control" parent="MainPane"]
anchors_preset = 0
anchor_left = 0.05
anchor_top = 0.12
anchor_right = 0.05
anchor_bottom = 0.63

[node name="OnlineButton" parent="MainPane/MenuButtons" instance=ExtResource("13")]
offset_right = 400.0
offset_bottom = 80.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource("16")
button_text = "ONLINE"

[node name="LocalButton" parent="MainPane/MenuButtons" instance=ExtResource("13")]
offset_top = 84.0
offset_right = 400.0
offset_bottom = 164.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource("2")
button_text = "LOCAL"

[node name="TrainingButton" parent="MainPane/MenuButtons" instance=ExtResource("13")]
offset_top = 168.0
offset_right = 400.0
offset_bottom = 248.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource("17")
button_text = "TRAINING"

[node name="RecordsButton" parent="MainPane/MenuButtons" instance=ExtResource("13")]
offset_top = 252.0
offset_right = 400.0
offset_bottom = 332.0
is_active = true
collapse_width = 400
base_width = 400
expanded_width = 420
slide_offset = 20
icon_texture = ExtResource("22")
button_text = "RECORDS"

[node name="LocalTab" type="VBoxContainer" parent="MainPane"]
visible = false
layout_mode = 0
anchor_left = 0.095
anchor_top = 0.26
anchor_right = 0.395
anchor_bottom = 0.44
theme_override_constants/separation = 0

[node name="VersusButton" type="Button" parent="MainPane/LocalTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/LocalTab/VersusButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "VERSUS"

[node name="PlaceholderButton" type="Button" parent="MainPane/LocalTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/LocalTab/PlaceholderButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "PLACEHOLDER"

[node name="TrainingTab" type="VBoxContainer" parent="MainPane"]
visible = false
layout_mode = 0
anchor_left = 0.095
anchor_top = 0.4
anchor_right = 0.395
anchor_bottom = 0.58
theme_override_constants/separation = 0

[node name="PracticeButton" type="Button" parent="MainPane/TrainingTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/TrainingTab/PracticeButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "PRACTICE"

[node name="TutorialButton" type="Button" parent="MainPane/TrainingTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/TrainingTab/TutorialButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "TUTORIAL"

[node name="RecordsTab" type="VBoxContainer" parent="MainPane"]
visible = false
layout_mode = 0
anchor_left = 0.095
anchor_top = 0.54
anchor_right = 0.395
anchor_bottom = 0.9
theme_override_constants/separation = 0

[node name="GameplayButton" type="Button" parent="MainPane/RecordsTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/GameplayButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "GAMEPLAY"

[node name="CollectionButton" type="Button" parent="MainPane/RecordsTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/CollectionButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "COLLECTION"

[node name="GalleryButton" type="Button" parent="MainPane/RecordsTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/GalleryButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "GALLERY"

[node name="FishingButton" type="Button" parent="MainPane/RecordsTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainPane/RecordsTab/FishingButton"]
layout_mode = 0
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
text = "FISHING"

[node name="Footer" type="Panel" parent="MainPane"]
layout_mode = 0
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("3")

[node name="FooterNotes" type="Label" parent="MainPane/Footer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 15.0
offset_right = -10.0
offset_bottom = -10.0
text = "Welcome to Project Delta"
